syntax = "proto3";

option csharp_namespace = "PMS.Services.Product";

package Product;

message ProductInfo {
    int32 id = 1;
    string name = 2;
    int32 price = 3;
}
